--- a/.gitignore
+++ b/.gitignore
@@ -1,12 +1,4 @@
-#package.xml file is recreated on the fly by Copado, no need to track unnecessary changes of this file
-package.xml
-
-classes/copado__*
-components/copado__*
-flows/copado__*
-staticresources/copado__*
-tabs/copado__*
-triggers/copado__*
-pages/copado__*
-
-permissionsets/copado__*
+node_modules
+deploy/*
+.idea
+package-lock.json
